# furious-purpose

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: assets.rs  game.rs  init.rs  loading.rs  main.rs  mainmenu.rs  player.rs  splash.rs  state.rs  ui.rs
