[package]
name = "furious-purpose"
version = "0.1.0"
authors = ["ninjapiraatti <tuomas.louekari@planetoidi.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
bevy_asset_loader = "0.16.1"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3